# valley-types

./: .gitignore  pyproject.toml
data-collection/: usgs_dem.py
notebooks/: draw_profile.ipynb  valley_and_ridge_lines.ipynb
scripts/: download_usgs_dem.py
toy_data/: USGS13:-122.57_37.81_-122.45_37.87.tif
