[tool.poetry]
name = "valley-types"
version = "0.1.0"
description = "explore different ways to cluster valleys from DEMs"
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.12.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
shapely = "^1.8.5"
rasterio = "^1.3.4"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
ipython = "^8.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
